# AIPO

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
alignment/: __init__.py  run_train.py
alignment/chat_template/: README.md  __init__.py  common.py  llama.jinja  mistral-instruct.jinja  vicuna.jinja  zephyr.jinja
alignment/dataset/: __init__.py  chat_dataset.py  hf_dataset.py
alignment/prompt/: __init__.py  llm_judge_prompt.py
alignment/runner/: __init__.py
alignment/runner/stages/: __init__.py  base.py  stage_barrier.py  stage_dpo.py  stage_generate_responses.py  stage_pair_rm.py  stage_self_instruct.py  stage_sft.py
alignment/runner/utils/: __init__.py  common.py
alignment/tools/: __init__.py
alignment/tools/evaluation/: __init__.py  generate_alpaca_eval_output.py  generate_arena_hard_judgment.py  generate_arena_hard_output.py  generate_mt_bench_judgment.py  generate_mt_bench_output.py  plot_evaluation.py  print_arena_hard_score.py  print_mt_bench_score.py  summarize_evaluation.py
alignment/tools/evaluation/arena-hard-v0.1/: gen_answer_config.yaml  judge_config.yaml  question.jsonl
alignment/tools/evaluation/arena-hard-v0.1/model_answer/: gpt-4-0314.jsonl
alignment/tools/evaluation/mt_bench/reference_answer/: gpt-4.jsonl
alignment/trainer/: __init__.py  customized_dpo_trainer.py
alignment/utils/: __init__.py  distributed_resolver.py  hf_trainer_state.py  iteration_resolver.py
configs/: config.yaml
configs/experiments/recipes/: README.md  debug.sh
configs/experiments/recipes/ultrafeedback/: debug.sh  iter_0_stage_1_dpo.yaml  iter_n_stage_1_dpo.yaml  run.sh
configs/experiments/recipes/ultrafeedback-pair_rm/: debug.sh  iter_0_stage_1_generate_responses.yaml  iter_0_stage_2_pair_rm.yaml  iter_0_stage_3_dpo.yaml  iter_n_stage_1_generate_responses.yaml  iter_n_stage_2_pair_rm.yaml  iter_n_stage_3_dpo.yaml  run.sh
configs/experiments/recipes/ultrafeedback-self_instruct-pair_rm/: debug.sh  iter_0_stage_1_self_instruct.yaml  iter_0_stage_2_generate_responses.yaml  iter_0_stage_3_pair_rm.yaml  iter_0_stage_4_dpo.yaml  iter_n_stage_1_self_instruct.yaml  iter_n_stage_2_generate_responses.yaml  iter_n_stage_3_pair_rm.yaml  iter_n_stage_4_dpo.yaml  run.sh
configs/experiments/stages/: READMD.md  base.yaml  stage_barrier.yaml  stage_dpo.yaml  stage_generate_responses.yaml  stage_pair_rm.yaml  stage_self_instruct.yaml
